Adjust finalize  example